meta données sur publications d' "usine"

--- a/templates/categories/_form.html.twig
+++ b/templates/categories/_form.html.twig
@@ -6,6 +6,7 @@
 {{ form_row(form.meta_tag_description) }}
 {{ form_row(form.keywords) }}
 {{ form_row(form.meta_tag_keywords) }}
+{{ form_row(form.language) }}
 {{ form_row(form.slug) }} 
 
 <fieldset class="form-group">
