--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -68,6 +68,8 @@
 
 		<a href="{{ path('products_new') }}" class="btn btn-success my-5" >Créer nouvelle sortie</a>
 
+		<a href="{{ path('metadata_edit', {slug: 'toutes-les-***REMOVED***'}) }}" class="btn btn-secondary m-5 float-right" >Méta données et contenus "toutes les ***REMOVED***"</a>
+
 		<table class="table">
 			<thead>
 				<tr>
