--- a/templates/links/_form.html.twig
+++ b/templates/links/_form.html.twig
@@ -6,20 +6,24 @@
 
 <div class="form-group" id="external-link-field">
 	<label for="externalLink">Saisir un lien sortant</label>
-	<input class="form-group w-100" name="externalLink" id="externalLink">
+	<input class="form-group w-100" name="externalLink" id="externalLink" value="{{ (link.type == 'external') ? link.url : '' }}">
 </div>
 
 <div class="form-group" id="categories-fields-list" data-url-path="{{ absolute_url(path('give_categories')) }}">
 	<label for="select_category">Sélectionnez une catégorie</label>
 	<select class="form-group w-100" name="category" id="select_category">
-		<option value=""></option>
+		<option value="{{ (link.type == '/categorie/') ? link.url |replace({'/categorie/': ''}) : '' }}">
+			{{ (link.type == '/categorie/') ? link.title : '' }}
+		</option>
 	</select>
 </div>
 
 <div class="form-group" id="pages-fields-list" data-url-path="{{ absolute_url(path('give_pages')) }}">
 	<label for="select_page">Sélectionnez une publication</label>
 	<select class="form-group w-100" name="page" id="select_page">
-		<option value=""></option>
+		<option value="{{ (link.type == '/page/') ? link.url |replace({'/page/': ''}) : '' }}">
+			{{ (link.type == '/page/') ? link.title : '' }}
+		</option>
 	</select>
 </div>
 
