--- a/templates/metaData/edit.html.twig
+++ b/templates/metaData/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Editer un lien
+{% block title %}Ludo et Sophie - Editer les méta données et contenus de la page
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Editer le lien "{{ link.title }}"</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - Editer les méta données et contenus de la page</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -17,7 +17,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Liens</li>
+						<li class="breadcrumb-item active">Méta données et contenus des pages</li>
 					</ol>
 				</div>
 				<!-- /.col -->
@@ -32,16 +32,11 @@
 	<div class="content">
 		<div class="container-fluid">
 
-        {{ include('links/_form.html.twig', {'button_label': 'Modifier'}) }}
+			{{ include('metaData/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-        <a href="{{ path('links_index') }}" class="btn btn-primary">Retour à la liste</a>
+			<a href="{{ path('pages_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
-        {{ include('links/_delete_form.html.twig') }}
-
+			{{ include('pages/_delete_form.html.twig') }}
+		</div>
 	</div>
-</div>
 {% endblock %}
-{% block javascripts %}
-<script src="{{ asset('js/whichLink.js') }}"></script>
-{% endblock %}
-
