--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Espace administrateur
+{% block title %}Timothy et Timothé - Espace administrateur
 {% endblock %}
 
 {% block body %}
@@ -10,7 +10,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Espace administrateur</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Espace administrateur</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
