--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="{{ asset('images/logo_neutre.jpg') }}" type="image/x-icon">
-        <title>{% block title %}Ludo et Sophie{% endblock %}</title>
+        <title>{% block title %}Timothy et Timothé{% endblock %}</title>
         
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="{{ asset('adminlte/plugins/fontawesome-free/css/all.min.css') }}">
@@ -55,7 +55,7 @@
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
                 <!-- Brand Logo -->
                 <a href="{{ path('admin') }}" title="Retour vers la page d'accueil administration">
-                    <img src="{{ asset('images/logo_neutre.jpg') }}" alt="Logo Ludo et Sophie" class="img-circle d-block w-75 mx-auto mt-2 mb-0">
+                    <img src="{{ asset('images/logo_neutre.jpg') }}" alt="Logo Timothy et Timothé" class="img-circle d-block w-75 mx-auto mt-2 mb-0">
                 </a>
 
                 <!-- Sidebar -->
