--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -24,7 +24,7 @@
 		{{ metaTagKeyword }} -
 	{% endfor %} #}
 	{{ page.metaTagTitle ?? '' }} -
-	Ludo et Sophie
+	Timothy et Timothé
 {% endblock %}
 
 
@@ -33,7 +33,7 @@
 	{# Arborescence #}
 	<ol class="breadcrumb bg-white">
 		<li class="breadcrumb-item">
-			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Accueil">
+			<a class="text-muted" href="{{ path('home') }}" title="Timothy et Timothé : Accueil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
