--- a/templates/home/product.html.twig
+++ b/templates/home/product.html.twig
@@ -24,7 +24,7 @@
 	{# {% for metaTagKeyword in product.metaTagKeywords %}
 		{{ metaTagKeyword }} -
 	{% endfor %} #}
-	{{ product.metaTagTitle ?? '' }} - Ludo et Sophie
+	{{ product.metaTagTitle ?? '' }} - Timothy et Timothé
 {% endblock %}
 
 {% block body %}
@@ -32,7 +32,7 @@
 	{# Arborescence de filtrage par catégories #}
 	<ol class="breadcrumb bg-white">
 		<li class="breadcrumb-item">
-			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Accueil">
+			<a class="text-muted" href="{{ path('home') }}" title="Timothy et Timothé : Accueil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
