--- a/templates/home/themes.html.twig
+++ b/templates/home/themes.html.twig
@@ -24,7 +24,7 @@
 		{{ metaTagKeyword }} -
 	{% endfor %} #}
 	{{ page.metaTagTitle ?? '' }} -
-	Ludo et Sophie
+	Timothy et Timothé
 {% endblock %}
 
 {% block body %}
@@ -55,7 +55,7 @@
             <div class="col-md-4 my-3">
                 <a class="text-decoration-none" href="{{ path('home_category', {slug: category.slug}) }}" title="Aller vers le thème {{ category.title }}">
                     {% if category.images is not empty %}
-                    <img class="d-block img-fluid mx-auto" src="{{ asset('images/products/' ~ category.images[0].name )| imagine_filter('miniatures_5on3') }}" alt="Logo Ludo et Sophie">
+                    <img class="d-block img-fluid mx-auto" src="{{ asset('images/products/' ~ category.images[0].name )| imagine_filter('miniatures_5on3') }}" alt="Logo Timothy et Timothé">
                     {% endif %}
                     <h3 class="text-center blue">{{ category.title }}</h3>
                 </a>
