--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Message de
+{% block title %}Timothy et Timothé - Message de
 	{{ message.name }}
 	le
 	{{ message.sentAt|date('d-m-Y H:i:s') }}
@@ -12,7 +12,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Message de
+					<h1 class="m-0 text-dark">Timothy et Timothé - Message de
 						{{ message.name }}
 						le
 						{{ message.sentAt|date('d-m-Y H:i:s') }}</h1>
