--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Modifier utilisateur{% endblock %}
+{% block title %}Timothy et Timothé - Modifier utilisateur{% endblock %}
 
 {% block body %}
 	<!-- Content Header (Page header) -->
@@ -8,7 +8,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Modifier utilisateur</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Modifier utilisateur</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
