--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Voir catégorie
+{% block title %}Timothy et Timothé - Voir catégorie
 	{{ category.id }}
 {% endblock %}
 
@@ -10,7 +10,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Voir catégorie "{{ category.title }}"</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Voir catégorie "{{ category.title }}"</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
