--- a/templates/frequently_asked_questions/new.html.twig
+++ b/templates/frequently_asked_questions/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Nouvelle question-réponse
+{% block title %}Timothy et Timothé - Nouvelle question-réponse
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Nouvelle question-réponse</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Nouvelle question-réponse</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
