--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -25,7 +25,7 @@
 		{{ metaTagKeyword }} -
 	{% endfor %} #}
 	{{ category.metaTagTitle ?? '' }} -
-	Ludo et Sophie
+	Timothy et Timothé
 {% endblock %}
 
 {% block body %}
@@ -33,7 +33,7 @@
 	{# Arborescence des filtres catégories #}
 	<ol class="breadcrumb bg-white">
 		<li class="breadcrumb-item">
-			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Accueil">
+			<a class="text-muted" href="{{ path('home') }}" title="Timothy et Timothé : Accueil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
