--- a/templates/home/younglings.html.twig
+++ b/templates/home/younglings.html.twig
@@ -24,7 +24,7 @@
 		{{ metaTagKeyword }} -
 	{% endfor %} #}
 	{{ page.metaTagTitle ?? '' }} -
-	Ludo et Sophie
+	Timothy et Timothé
 {% endblock %}
 
 {% block body %}
