--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="{{ asset('images/logo_neutre.jpg') }}" type="image/x-icon">
-        <title>Ludo et Sophie - Connection administration</title>
+        <title>Timothy et Timothé - Connection administration</title>
 
         {# Chargement CDNs #}
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
@@ -15,8 +15,8 @@
 
             <div class="w-50 mx-auto mb-5">
                 <header>
-                    <a href="{{ path('home') }}" title="Ludo et Sophie : Accueil"><img class="d-block mx-auto" src="{{ asset('images/logo_neutre.jpg') }}" alt="Image bandeau du site 'Ludo et Sophie'"></a>
-                    <h1 class="text-center" >Ludo et Sophie - Bienvenue dans l'administration du site</h1>
+                    <a href="{{ path('home') }}" title="Timothy et Timothé : Accueil"><img class="d-block mx-auto" src="{{ asset('images/logo_neutre.jpg') }}" alt="Image bandeau du site 'Timothy et Timothé'"></a>
+                    <h1 class="text-center" >Timothy et Timothé - Bienvenue dans l'administration du site</h1>
                 </header>
 
                 <main>
