--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Utilisateur
+{% block title %}Timothy et Timothé - Utilisateur
 	{{ user.id }}
 {% endblock %}
 
@@ -10,7 +10,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Utilisateur
+					<h1 class="m-0 text-dark">Timothy et Timothé - Utilisateur
 						{{ user.firstname }}
 						{{ user.lastname }}</h1>
 				</div>
