màj expressions hard-coded

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -288,7 +288,7 @@ body{
                     }
                 }
 
-                //Page ***REMOVED*** thématiques
+                //Page Produits thématiques
                 >div{
                     >a{
                         >h3{
