--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -206,12 +206,12 @@
                                     </li>
                                 </ul>
                             </li>
-                            {# Gestion des petits éclaireurs #}
+                            {# Gestion des Beta testers #}
                             <li class="nav-item has-treeview">
                                 <a href="#" class="nav-link">
                                     <i class="nav-icon fas fa-child"></i>
                                     <p>
-                                        Les petits éclaireurs
+                                        Les Beta testers
                                         <i class="fas fa-angle-left right"></i>
                                     </p>
                                 </a>
