--- a/templates/home/people.html.twig
+++ b/templates/home/people.html.twig
@@ -90,7 +90,7 @@
     {% endfor %}
 
 
-    <a class="p-3 m-5 mx-auto text-white text-decoration-none" href="{{ path('home_younglings') }}">Sans oublier tous nos petits éclaireurs que vous pouvez découvrir sur leur page à eux.</a>
+    <a class="p-3 m-5 mx-auto text-white text-decoration-none" href="{{ path('home_younglings') }}">Sans oublier tous nos Beta testers que vous pouvez découvrir sur leur page à eux.</a>
 </section>
 
 		
