--- a/templates/home/product.html.twig
+++ b/templates/home/product.html.twig
@@ -39,8 +39,8 @@
 
 		{% if formAllProducts == true %}
 			<li class="breadcrumb-item" aria-current="page">
-				<a class="text-decoration-none text-muted" href="{{ path('home_all_products') }}" title="Aller à toutes les ***REMOVED***">
-					<p>Toutes les ***REMOVED***</p>
+				<a class="text-decoration-none text-muted" href="{{ path('home_all_products') }}" title="Aller à Tous les produits">
+					<p>Tous les produits</p>
 				</a>
 			</li>
 		{% elseif topCategoryTitlesAndSlugs|length > 0 %}
