--- a/templates/home/themes.html.twig
+++ b/templates/home/themes.html.twig
@@ -63,7 +63,7 @@
         {% endfor %}
     </div>
 
-    <a class="d-block w-50 p-3 m-5 mx-auto text-white text-decoration-none text-center" href="{{ path('home_all_products') }}" title="Voir toutes les ***REMOVED***">Voir toutes les ***REMOVED*** programmées</a>
+    <a class="d-block w-50 p-3 m-5 mx-auto text-white text-decoration-none text-center" href="{{ path('home_all_products') }}" title="Voir Tous les produits">Voir Tous les produits programmées</a>
 
 </section>
         
