--- a/templates/younglings/index.html.twig
+++ b/templates/younglings/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Timothy et Timothé - Index des petits éclaireurs
+{% block title %}Timothy et Timothé - Index des Beta testers
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Timothy et Timothé - Index des petits éclaireurs</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Index des Beta testers</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -17,7 +17,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Les petits éclaireurs</li>
+						<li class="breadcrumb-item active">Les Beta testers</li>
 					</ol>
 				</div>
 				<!-- /.col -->
