màj expressions hard-coded 2

--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -219,13 +219,13 @@
                                     <li class="nav-item">
                                         <a href="{{ path('younglings_index') }}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>Liste de ***REMOVED***s</p>
+                                            <p>Liste des Beta testers</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="{{ path('younglings_new') }}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>Nouvel éclaireur</p>
+                                            <p>Nouveau beta tester</p>
                                         </a>
                                     </li>
                                 </ul>
