--- a/templates/languages/edit.html.twig
+++ b/templates/languages/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Timothy et Timothé - Editer langue de publication des ***REMOVED***
+{% block title %}Timothy et Timothé - Editer langue de publication des sorties
 {% endblock %}
 
 {% block body %}
@@ -17,7 +17,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Langues de publication des ***REMOVED***</li>
+						<li class="breadcrumb-item active">Langues de publication des sorties</li>
 					</ol>
 				</div>
 				<!-- /.col -->
