--- a/templates/products/edit.html.twig
+++ b/templates/products/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('products/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('products_index') }}" class="btn btn-primary">Retour à la liste des ***REMOVED***</a>
+			<a href="{{ path('products_index') }}" class="btn btn-primary">Retour à la liste des sorties</a>
 
 			{{ include('products/_delete_form.html.twig') }}
 		</div>
