--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Timothy et Timothé - Index des langues de publication des ***REMOVED***
+{% block title %}Timothy et Timothé - Index des langues de publication des sorties
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Timothy et Timothé - Index des langues de publication des ***REMOVED***</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Index des langues de publication des sorties</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -17,7 +17,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Langues de publication des ***REMOVED***</li>
+						<li class="breadcrumb-item active">Langues de publication des sorties</li>
 					</ol>
 				</div>
 				<!-- /.col -->
@@ -40,7 +40,7 @@
 				<div class="alert alert-warning" role="alert">{{ message }}</div>
 			{% endfor %}
 
-			<a href="{{ path('languages_new') }}" class="btn btn-success my-5"><i class="fas fa-plus"></i> Ajouter langue de publication des ***REMOVED***</a>
+			<a href="{{ path('languages_new') }}" class="btn btn-success my-5"><i class="fas fa-plus"></i> Ajouter langue de publication des sorties</a>
 
 			<table class="table">
 				<thead>
@@ -72,7 +72,7 @@
 				</tbody>
 			</table>
 
-			<a href="{{ path('languages_new') }}" class="btn btn-success my-5"><i class="fas fa-plus"></i> Ajouter langue de publication des ***REMOVED***</a>
+			<a href="{{ path('languages_new') }}" class="btn btn-success my-5"><i class="fas fa-plus"></i> Ajouter langue de publication des sorties</a>
 		</div>
 	</div>
 {% endblock %}
