--- a/templates/languages/new.html.twig
+++ b/templates/languages/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Timothy et Timothé - Ajout langue de publication des ***REMOVED***
+{% block title %}Timothy et Timothé - Ajout langue de publication des sorties
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Timothy et Timothé - Ajout langue de publication des ***REMOVED***</h1>
+					<h1 class="m-0 text-dark">Timothy et Timothé - Ajout langue de publication des sorties</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -17,7 +17,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Langues de publication des ***REMOVED***</li>
+						<li class="breadcrumb-item active">Langues de publication des sorties</li>
 					</ol>
 				</div>
 				<!-- /.col -->
