--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Timothy et Timothé - Index des ***REMOVED***
+{% block title %}Timothy et Timothé - Index des sorties
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 	<div class="container-fluid">
 		<div class="row mb-2">
 			<div class="col-sm-6">
-				<h1 class="m-0 text-dark">Timothy et Timothé - Index des ***REMOVED***</h1>
+				<h1 class="m-0 text-dark">Timothy et Timothé - Index des sorties</h1>
 			</div>
 			<!-- /.col -->
 			<div class="col-sm-6">
