--- a/templates/younglings/_delete_form.html.twig
+++ b/templates/younglings/_delete_form.html.twig
@@ -8,13 +8,13 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteYoungling{{ youngling.id }}ModalLongTitle">Suppression des infos sur l'***REMOVED*** <span class="font-italic">{{ youngling.name }}</span></h5>
+                <h5 class="modal-title" id="deleteYoungling{{ youngling.id }}ModalLongTitle">Suppression des infos sur le tester <span class="font-italic">{{ youngling.name }}</span></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                La suppression des infos sur l'***REMOVED*** <span class="font-italic">{{ youngling.name }}</span> sera irréversible.
+                La suppression des infos sur le tester <span class="font-italic">{{ youngling.name }}</span> sera irréversible.
                 Voulez-vous vraiment supprimer ces infos ?
             </div>
             <div class="modal-footer">
